--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@react-navigation/material-bottom-tabs": "^5.2.2",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
+    "apollo-server": "^2.15.0",
     "expo": "~37.0.3",
+    "graphql": "^15.1.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-action-button": "^2.8.5",
+    "react-native-button-toggle-group": "^1.0.2",
     "react-native-country-code-telephone-input": "0.0.9",
     "react-native-country-picker-modal": "^1.10.0",
     "react-native-custom-actionsheet": "^0.1.0",
@@ -25,6 +28,7 @@
     "react-native-elements": "^2.0.0",
     "react-native-floating-action": "^1.20.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "^0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-paper": "^3.10.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
