--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server": "^2.15.0",
     "expo": "~37.0.3",
     "graphql": "^15.1.0",
+    "lottie-react-native": "^3.4.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -28,6 +29,7 @@
     "react-native-elements": "^2.0.0",
     "react-native-floating-action": "^1.20.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-google-maps-directions": "^2.1.1",
     "react-native-maps": "^0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-paper": "^3.10.1",
