--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-action-button": "^2.8.5",
     "react-native-button-toggle-group": "^1.0.2",
+    "react-native-collapsible": "^1.5.2",
     "react-native-country-code-telephone-input": "0.0.9",
     "react-native-country-picker-modal": "^1.10.0",
     "react-native-custom-actionsheet": "^0.1.0",
