--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "react-native-floating-action": "^1.20.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-google-maps-directions": "^2.1.1",
-    "react-native-maps": "^0.27.1",
+    "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.6",
     "react-native-paper": "^3.10.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "0.7.3",
+    "react-native-safe-module": "^1.2.0",
     "react-native-screens": "~2.2.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-smooth-picker": "^1.0.2",
